# cdn

./: .dockerignore  .gitignore  AGENTS.md  Dockerfile.ui  Makefile  README.md  docker-compose.yml  next.config.ts  package-lock.json  package.json  vitest.config.ts
api-go/: Dockerfile  go.mod
api-go/migrations/: 001_initial_control_plane.sql
app/: globals.css  layout.tsx  page.tsx
app/analytics/: page.tsx
app/auth/: actions.ts
app/domains/: page.tsx
app/login/: page.tsx
clickhouse/init/: 001_request_events.sql
components/auth/: login-form.tsx  logout-button.tsx
components/demo/: analytics-page-shell.tsx  analytics-summary-cards.tsx  api-log-panel.tsx  cache-policy-card.tsx  cache-value-card.tsx  domain-config-sections.tsx  domain-onboarding-card.tsx  domain-readiness-badge.tsx  domain-state-timeline.tsx  domains-shell.tsx  edge-deployment-card.tsx  edge-log-panel.tsx  evidence-tabs.tsx  new-domain-form.tsx  overview-shell.tsx  policy-revision-banner.tsx  quota-status-card.tsx  quota-threshold-banner.tsx  request-proof-panel.tsx  zone-detail-shell.tsx
docs/brainstorms/: 2026-03-30-cdn-client-demo-brainstorm.md  (+2 more)
docs/demo/: demo-script.md  (+6 more)
edge-rust/: Cargo.toml  Dockerfile
edge-rust/src/: cache.rs  config.rs  counters.rs  logging.rs  main.rs  proxy.rs  request_flow.rs  waf.rs
nginx/: nginx.conf
tasks/: lessons.md  todo.md
test-site/: about.html  index.html
todos/: 001-pending-p1-rate-limit-breaks-quota-demo-flow.md  002-pending-p1-protect-destructive-and-internal-api-paths.md  003-pending-p2-add-scriptable-reseed-and-request-correlation.md
(+90 files in other folders)
